# cuta

./: CMakeLists.txt  README.md
include/cuta/: helper.cuh  reduce.cuh
src/: CMakeLists.txt  reduce.cu
test/: CMakeLists.txt  CMakeLists.txt.in  reduce_test.cu
